Simple framework for testing parser
* When using Oasis, to reference modules in a different directory, you
  have to build a library, and then reference that. (Oasis doesn't
  support manually adding `-I` args)
* Parser tests automatically validate all programs in
  `parser_examples/(accept|reject)`.

--- a/subc/makefile
+++ b/subc/makefile
@@ -1,5 +1,5 @@
 all:
-	ocaml setup.ml -configure --enable-tests
+	ocaml setup.ml -configure --enable-tests > /dev/null
 	ocaml setup.ml -build
 	ocaml setup.ml -test
 
