Resolve most shift/reduce conflicts in grammary
https://www.lysator.liu.se/c/ANSI-C-grammar-y.html

--- a/subc/makefile
+++ b/subc/makefile
@@ -5,4 +5,5 @@ all:
 
 clean:
 	rm -rf _build myocamlbuild.ml setup.data setup.ml setup.log _tags
+	rm -f src/lib/parser.automaton src/lib/parser.conflicts src/lib/parser.ml src/lib/parser.mli
 	oasis setup
