--- a/subc/makefile
+++ b/subc/makefile
@@ -7,3 +7,6 @@ clean:
 	rm -rf _build myocamlbuild.ml setup.data setup.ml setup.log _tags
 	rm -f src/lib/parser.automaton src/lib/parser.conflicts src/lib/parser.ml src/lib/parser.mli
 	oasis setup
+
+deps:
+	opam install core llvm menhir oasis ounit ppx_deriving
